--- a/index.html
+++ b/index.html
@@ -1,21 +1,55 @@
-<html lang="en-US">
-    <head>
-        <title>Chirantan Mukherjee's Home Page</title>
-        <meta name="Home Page of Chirantan Mukherjee" content="This is the academic homepage of Chirantan Mukherjee at Western University. Email: cmukher@uwo.ca" charset="UTF-8">
-        <META HTTP-EQUIV="Refresh"
-        CONTENT="0;URL=https://publish.uwo.ca/~cmukher/">
-        <style>
-            p {font-size:110%;}
-            ul {font-size:110%;}
-            ol {font-size:110%;}
-        </style>
-    </head>
-    <body bgcolor="  #76AEED">
-        <h1>Chirantan Mukherjee's Old Home Page</h1>
-        <p>
-            I have moved to University of Western Ontario. You should be automatically redirected or you can find my new website at
-            <a href="https://csd.uwo.ca/~cmukher/">here</a>
-            . 
-        </p>
-    </body>
-    </html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="This is the academic homepage of Chirantan Mukherjee at Western University.">
+    <meta http-equiv="refresh" content="3; URL=https://publish.uwo.ca/~cmukher/">
+    <title>Chirantan Mukherjee's Home Page</title>
+    <style>
+        body {
+            background-color: #76AEED;
+            background-image: url('mc.jpg'); /* Replace with the URL of your image */
+            background-size: cover; /* Ensures the image covers the entire page */
+            background-repeat: no-repeat;
+            background-position: center;
+            background-attachment: fixed; /* Keeps the image in place during scrolling */
+            opacity: 0.9; /* Makes the background slightly transparent */
+            font-family: Arial, sans-serif;
+            color: #333;
+            line-height: 1.6;
+            text-align: center;
+            padding: 2rem;
+        }
+        a {
+            color: #0056b3;
+            text-decoration: none;
+        }
+        a:hover {
+            text-decoration: underline;
+        }
+        h1 {
+            background-color: rgba(255, 255, 255, 0.7); /* Adds a semi-transparent background to the text */
+            display: inline-block;
+            padding: 0.5rem 1rem;
+            border-radius: 5px;
+        }
+        p {
+            background-color: rgba(255, 255, 255, 0.5); /* Makes the text more readable */
+            display: inline-block;
+            padding: 0.5rem 1rem;
+            border-radius: 5px;
+        }
+    </style>
+</head>
+<body>
+    <h1>Chirantan Mukherjee's Old Home Page</h1>
+    <p>
+        This page has moved to the Computer Science Faculty at The University of Western Ontario.
+    </p>
+    <p>
+        You will be automatically redirected to the new website in <strong>3 seconds</strong>.
+        If not, please click <a href="https://publish.uwo.ca/~cmukher/">here</a>.
+    </p>
+</body>
+</html>
