--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     </p>
     <p>
         You will be automatically redirected to the new website in <strong>3 seconds</strong>.
-        If not, please click <a href="https://publish.uwo.ca/~cmukher/">here</a>.
+        If not, please click <a href="https://csd.uwo.ca/~cmukher/">here</a>.
     </p>
 </body>
 </html>
