--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <style>
         body {
             background-color: #76AEED;
-            background-image: url('watermark-image.jpg'); /* Replace with your image file name */
+            background-image: url('mc.jpg'); /* Replace with your image file name */
             background-size: cover; /* Ensures the image covers the entire page */
             background-repeat: no-repeat;
             background-position: center;
