--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="This is the academic homepage of Chirantan Mukherjee at Western University.">
-    <meta http-equiv="refresh" content="3; URL=https://publish.uwo.ca/~cmukher/">
+    <meta http-equiv="refresh" content="3; URL=https://www.csd.uwo.ca/~cmukher/">
     <title>Chirantan Mukherjee's Home Page</title>
     <style>
         body {
@@ -49,7 +49,7 @@
     </p>
     <p>
         You will be automatically redirected to the new website in <strong>3 seconds</strong>.
-        If not, please click <a href="https://csd.uwo.ca/~cmukher/">here</a>.
+        If not, please click <a href="https://www.csd.uwo.ca/~cmukher/">here</a>.
     </p>
 </body>
 </html>
